<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="16dp"
    tools:context=".ui.MainActivity"
    android:id="@+id/main">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/app_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="@color/colorPrimary"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:layout_marginBottom="16dp"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:orientation="horizontal"
            android:background="@color/colorPrimaryDark"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_weight="0.2"
            android:alpha="0.64"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/navigator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/app_menu_item_title"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                android:textColor="@color/colorAndroidAccent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="4dp"
                android:alpha="0.67"
                android:background="@android:color/darker_gray"
                android:orientation="horizontal" />

            <Button
                android:id="@+id/main_menu_ui_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="Main menu "
                android:drawableStart="@drawable/ic_home"
                android:text="@string/btn_main_menu" />

            <Button
                android:id="@+id/store_ui_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_store"
                android:text="@string/btn_store" />

            <Button
                android:id="@+id/retrieve_ui_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_retrieve"
                android:text="@string/btn_retrieve" />

            <Button
                android:id="@+id/help_ui_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_help"
                android:text="@string/btn_help" />

            <Button
                android:id="@+id/about_us_ui_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_about_us"
                android:text="@string/btn_about_us" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="4dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:alpha="0.67"
            android:background="@android:color/darker_gray"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:id="@+id/fragment_container"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".8"
                android:orientation="vertical"
                tools:layout="@layout/fragment_help">

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="4dp"
                android:layout_marginRight="16dp"
                android:alpha="0.67"
                android:background="@android:color/darker_gray"
                android:orientation="horizontal" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".2">

                <TextView
                    android:id="@+id/app_status_msg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/btn_help_instructions_storing" />


            </android.support.constraint.ConstraintLayout>


        </LinearLayout>

    </LinearLayout>



</LinearLayout>